# CryptoRust

./: Cargo.toml  crypto.md
src/: lib.rs  main.rs  salt.rs
