[package]
name = "cryptoRust"
version = "0.1.0"
author = ["Leanne J Dong <jdleanne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
near-sdk = "4.0.0"
hex = "0.4.3"
sha2 = "0.10.6"
hex-literal = "0.3.4"
hmac = "0.12.1"
sodiumoxide = "0.2.5"

error-chain = "0.11.0"
data-encoding = "2.0.0-rc.2"
ring = "0.16.20"
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }

